Added display data for sunset time

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
           <div class="col">
             <img class="icon" src="sunrise.png"/>
             <h6 id="sunrise"></h6>
+            <img class="icon" src="sunset.png" />
+            <h6 id="sunset"></h6>
           </div>
         </div>
       </div>
