Fix search bar styling

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div id="main">
         <div class="searchBox">
           <form>
-            <input type="text" id="location" name="location" placeholder="Enter a location to retrieve latest forecast">
-            <input class="btn-primary" type="submit" name="submit" id="submitLocation">
+            <input type="search" id="location" name="location" placeholder="Enter a location to retrieve latest forecast">
+            <button class="search-button" type="submit" id="submitLocation"><img class="icon" src="search.png"/></button>
           </form>
         </div>
       </div>
