--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
-    <script src="weatherNEW.js" defer></script>
+    <script src="../weatherNEW.js" defer></script>
     <title>Weather Dashboard</title>
 </head>
 <body class="w-full min-h-screen flex">
@@ -18,26 +18,26 @@
         </div>
 
         <div class="flex flex-wrap w-full min-fit">
-            <div class="w-1/6 h-5/6 bg-card-theme rounded-md ml-96 mt-24">
-                <input type="search" placeholder="Enter City" class="w-72 h-10 ml-2 mt-4 border-2 border-black rounded-md placeholder:pl-2 placeholder:italic"/>
-                <button class="ml-2 mt-1 w-72 h-9 rounded-md text-white font-semibold bg-aero hover:bg-active-theme duration-500">Search</button>
+            <div class="w-1/6 h-max bg-card-theme rounded-md ml-96 mt-24">
+                <input type="search" id="location" placeholder="Enter City" class="w-72 h-10 ml-2 mt-4 border-2 border-black rounded-md placeholder:pl-2 placeholder:italic"/>
+                <button id="submitLocation" class="ml-2 mt-1 w-72 h-9 rounded-md text-white font-semibold bg-aero hover:bg-active-theme duration-500">Search</button>
             </div>
     
             <div class="flex-column">
-                    <h3 class="mt-24 ml-2 font-semibold text-3xl">Current weather for Toronto, CA</h3>
+                    <h3 id="cityName" class="mt-24 ml-2 font-semibold text-3xl">Current forecast for</h3>
 
                     <div class="flex h-52 w-full">
 
                             <div class="flex-col bg-card-theme rounded-md w-64 h-52 ml-2 mt-4">
                                 <div class="flex justify-between">
-                                    <h1 class="text-5xl ml-4 mt-4 tracking-tighter">1&deg;C</h1>
-                                    <h3 class="w-12 h-8 mt-5 mr-16 text-2xl font-medium">Clouds</h3>
+                                    <h1 id="cityTemperature" class="text-5xl ml-4 mt-4 tracking-tighter">&deg;C</h1>
+                                    <h3 id="currentWeather" class="w-12 h-8 mt-5 mr-16 text-2xl font-medium"></h3>
                                 </div>
                                 <div class="flex justify-between mt-20">
                                     <div class="flex">
-                                        <h3 class="w-10 text-md text-header-theme font-medium leading-none ml-4 mt-4">Feels Like</h3><h3 class="text-xl tracking-tighter font-medium ml-1 mt-5">5&deg;C</h3>
+                                        <h3 class="w-10 text-md text-header-theme font-medium leading-none ml-4 mt-4">Feels Like</h3><h3 id="feels-like" class="text-2xl tracking-tighter font-medium ml-1 mt-4"></h3>
                                     </div>
-                                    <img class="mr-2 -mt-2" src="../images/weather/cloudy.png"/>
+                                    <img id="weather-icon" class="mr-2 -mt-5" src=""/>
                                 </div>
                             </div>
     
@@ -90,7 +90,7 @@
                                     </div>
                                     <div class="flex-col justify-items-center text-md mr-7 mt-2">
                                         <h3 class="text-header-theme font-medium">Sunrise</h3>
-                                        <h3 class="font-semibold">5:42am</h3>
+                                        <h3 id="sunrise" class="font-semibold"></h3>
                                     </div>
                                 </div>
 
@@ -100,7 +100,7 @@
                                     </div>
                                     <div class="flex-col justify-items-center text-md mr-7 mt-2">
                                         <h3 class="text-header-theme font-medium">Sunset</h3>
-                                        <h3 class="font-semibold">8:26pm</h3>
+                                        <h3 class="font-semibold"></h3>
                                     </div>
                                 </div>
                             </div>
