--- a/src/index.html
+++ b/src/index.html
@@ -112,44 +112,44 @@
 
                 <h3 class="mt-8 ml-2 font-semibold text-3xl">5 Day Forecast</h3>
                 <div class="bg-back-theme flex rounded-md w-full h-56 mb-80 ml-2 mt-2">
-                    <div class="w-36 h-56 bg-card-theme flex-col justify-center items-center rounded-sm">
-                        <h3 id="day-1" class="ml-11 mt-4 font-semibold text-header-theme">Monday</h3>
-                        <img id="icon-1" class="w-14 ml-11 mt-4" src=""/>
-                        <h3 id="temp-1" class="ml-12 text-2xl mt-1"></h3>
-                        <p id="wind-1" class="ml-5"></p>
-                        <p id="press-1" class="ml-1"></p>
+                    <div class="w-36 h-56 bg-card-theme flex flex-col items-center rounded-sm">
+                        <h3 id="day-1" class="mt-4 font-semibold text-header-theme">Monday</h3>
+                        <img id="icon-1" class="w-14 mt-4" src=""/>
+                        <h3 id="temp-1" class="text-2xl mt-1"></h3>
+                        <p id="wind-1"></p>
+                        <p id="press-1"></p>
                     </div>
 
-                    <div class="w-36 h-56 bg-card-theme flex-col justify-center items-center rounded-sm ml-2">
-                        <h3 id="day-2" class="ml-11 mt-4 font-semibold text-header-theme"></h3>
-                        <img id="icon-2" class="w-14 ml-11 mt-4" src=""/>
-                        <h3 id="temp-2" class="ml-12 text-2xl mt-1"></h3>
-                        <p id="wind-2" class="ml-5"></p>
-                        <p id="press-2" class="ml-1"></p>
+                    <div class="w-36 h-56 bg-card-theme flex flex-col items-center rounded-sm ml-2">
+                        <h3 id="day-2" class="mt-4 font-semibold text-header-theme"></h3>
+                        <img id="icon-2" class="w-14 mt-4" src=""/>
+                        <h3 id="temp-2" class="text-2xl mt-1"></h3>
+                        <p id="wind-2"></p>
+                        <p id="press-2"></p>
                     </div>
 
-                    <div class="w-36 h-56 bg-card-theme flex-col justify-center items-center rounded-sm ml-2">
-                        <h3 id="day-3" class="ml-7 mt-4 font-semibold text-header-theme"></h3>
-                        <img id="icon-3" class="w-14 ml-11 mt-4" src=""/>
-                        <h3 id="temp-3" class="ml-12 text-2xl mt-1"></h3>
-                        <p id="wind-3" class="ml-5"></p>
-                        <p id="press-3" class="ml-1"></p>
+                    <div class="w-36 h-56 bg-card-theme flex flex-col items-center rounded-sm ml-2">
+                        <h3 id="day-3" class="mt-4 font-semibold text-header-theme"></h3>
+                        <img id="icon-3" class="w-14 mt-4" src=""/>
+                        <h3 id="temp-3" class="text-2xl mt-1"></h3>
+                        <p id="wind-3"></p>
+                        <p id="press-3"></p>
                     </div>
 
-                    <div class="w-36 h-56 bg-card-theme flex-col justify-center items-center rounded-sm ml-2">
-                        <h3 id="day-4" class="ml-9 mt-4 font-semibold text-header-theme"></h3>
-                        <img id="icon-4" class="w-14 ml-11 mt-4" src=""/>
-                        <h3 id="temp-4" class="ml-12 text-2xl mt-1"></h3>
-                        <p id="wind-4" class="ml-5"></p>
-                        <p id="press-4" class="ml-1"></p>
+                    <div class="w-36 h-56 bg-card-theme flex flex-col items-center rounded-sm ml-2">
+                        <h3 id="day-4" class="mt-4 font-semibold text-header-theme"></h3>
+                        <img id="icon-4" class="w-14 mt-4" src=""/>
+                        <h3 id="temp-4" class="text-2xl mt-1"></h3>
+                        <p id="wind-4"></p>
+                        <p id="press-4"></p>
                     </div>
 
-                    <div class="w-36 h-56 bg-card-theme flex-col justify-center items-center rounded-sm ml-2">
-                        <h3 id="day-5" class="ml-12 mt-4 font-semibold text-header-theme"></h3>
-                        <img id="icon-5" class="w-14 ml-11 mt-4" src=""/>
-                        <h3 id="temp-5" class="ml-12 text-2xl mt-1"></h3>
-                        <p id="wind-5" class="ml-5"></p>
-                        <p id="press-5" class="ml-1"></p>
+                    <div class="w-36 h-56 bg-card-theme flex flex-col items-center rounded-sm ml-2">
+                        <h3 id="day-5" class="mt-4 font-semibold text-header-theme"></h3>
+                        <img id="icon-5" class="w-14 mt-4" src=""/>
+                        <h3 id="temp-5" class="text-2xl mt-1"></h3>
+                        <p id="wind-5"></p>
+                        <p id="press-5"></p>
                     </div>
                 </div>
             </div>
